some changes due to new logic

--- a/docs/src/content/docs/osb/monsters.mdx
+++ b/docs/src/content/docs/osb/monsters.mdx
@@ -2330,6 +2330,42 @@ Melee gear boosts, it is **required** to have atleast one of these:
 </Tabs>
 ---
 
+## Elder custodian stalker
+
+<Tabs>
+<TabItem label="Information">
+    - You can view the drops for this monster on the osrs wiki: [Elder custodian stalker](https://oldschool.runescape.wiki/w/Elder%20custodian%20stalker)
+
+- You can send your minion to kill this monster using: [[/k name\:Elder custodian stalker]]
+
+- You can check your KC using: [[/minion kc name\:Elder custodian stalker]]
+
+- You can check the KC leaderboard using: [[/lb kc monster\:Elder custodian stalker]]
+
+- You can check your collection log using: [[/cl name\:Elder custodian stalker]]
+
+- You can check the collection log leaderboard using: [[/lb cl cl\:Elder custodian stalker]]
+
+- You can barrage this monster [[/k name\:Elder custodian stalker method\:barrage]]
+
+- You can dwarf multicannon this monster [[/k name\:Elder custodian stalker method\:cannon]]
+
+</TabItem>
+<TabItem label="Costs">
+    - Requires food in your bank to kill, the amount needed is heavily reduced based on your gear/experience. 
+
+</TabItem>
+<TabItem label="Requirements">
+    [[slayer\:76]]
+
+**Required Quests**
+
+- Shadows of Custodia
+
+</TabItem>
+</Tabs>
+---
+
 ## Feral Vampyre
 
 <Tabs>
@@ -3001,6 +3037,42 @@ You can have one of the following boosts:
 </Tabs>
 ---
 
+## Juvenile custodian stalker
+
+<Tabs>
+<TabItem label="Information">
+    - You can view the drops for this monster on the osrs wiki: [Juvenile custodian stalker](https://oldschool.runescape.wiki/w/Juvenile%20custodian%20stalker)
+
+- You can send your minion to kill this monster using: [[/k name\:Juvenile custodian stalker]]
+
+- You can check your KC using: [[/minion kc name\:Juvenile custodian stalker]]
+
+- You can check the KC leaderboard using: [[/lb kc monster\:Juvenile custodian stalker]]
+
+- You can check your collection log using: [[/cl name\:Juvenile custodian stalker]]
+
+- You can check the collection log leaderboard using: [[/lb cl cl\:Juvenile custodian stalker]]
+
+- You can barrage this monster [[/k name\:Juvenile custodian stalker method\:barrage]]
+
+- You can dwarf multicannon this monster [[/k name\:Juvenile custodian stalker method\:cannon]]
+
+</TabItem>
+<TabItem label="Costs">
+    - Requires food in your bank to kill, the amount needed is heavily reduced based on your gear/experience. 
+
+</TabItem>
+<TabItem label="Requirements">
+    [[slayer\:54]]
+
+**Required Quests**
+
+- Shadows of Custodia
+
+</TabItem>
+</Tabs>
+---
+
 ## K'ril Tsutsaroth
 
 <Tabs>
@@ -3559,6 +3631,42 @@ You can have one of the following boosts:
 ---
 
 </details>
+</TabItem>
+</Tabs>
+---
+
+## Mature custodian stalker
+
+<Tabs>
+<TabItem label="Information">
+    - You can view the drops for this monster on the osrs wiki: [Mature custodian stalker](https://oldschool.runescape.wiki/w/Mature%20custodian%20stalker)
+
+- You can send your minion to kill this monster using: [[/k name\:Mature custodian stalker]]
+
+- You can check your KC using: [[/minion kc name\:Mature custodian stalker]]
+
+- You can check the KC leaderboard using: [[/lb kc monster\:Mature custodian stalker]]
+
+- You can check your collection log using: [[/cl name\:Mature custodian stalker]]
+
+- You can check the collection log leaderboard using: [[/lb cl cl\:Mature custodian stalker]]
+
+- You can barrage this monster [[/k name\:Mature custodian stalker method\:barrage]]
+
+- You can dwarf multicannon this monster [[/k name\:Mature custodian stalker method\:cannon]]
+
+</TabItem>
+<TabItem label="Costs">
+    - Requires food in your bank to kill, the amount needed is heavily reduced based on your gear/experience. 
+
+</TabItem>
+<TabItem label="Requirements">
+    [[slayer\:67]]
+
+**Required Quests**
+
+- Shadows of Custodia
+
 </TabItem>
 </Tabs>
 ---
