--- a/docs/src/content/docs/osb/quests.mdx
+++ b/docs/src/content/docs/osb/quests.mdx
@@ -179,6 +179,26 @@ You can send your minion to do this quest using [[/activities quest name\:Perilo
 
 [[slayer\:40,000]] [[runecraft\:5,000]] [[hunter\:5,000]] [[fishing\:5,000]]
 
+## Shadows of Custodia
+
+You can send your minion to do this quest using [[/activities quest name\:Shadows of Custodia]]
+
+### Skill Requirements
+
+- Skills: [[slayer\:54]] [[fishing\:45]] [[construction\:41]] [[hunter\:36]]
+
+### Required Quests
+
+- Must have finished Children of the Sun
+
+### Other requirements
+
+- Combat Level requirement: 50
+
+### XP Rewards
+
+[[slayer\:10,000]] [[hunter\:4,000]] [[fishing\:3,000]] [[construction\:3,000]]
+
 ## The Curse of Arrav
 
 You can send your minion to do this quest using [[/activities quest name\:The Curse of Arrav]]
