moons of peril start

--- a/docs/src/content/docs/osb/monsters.mdx
+++ b/docs/src/content/docs/osb/monsters.mdx
@@ -3563,6 +3563,83 @@ You can have one of the following boosts:
 </Tabs>
 ---
 
+## Moons of Peril
+
+<Tabs>
+<TabItem label="Information">
+    - You can view the drops for this monster on the osrs wiki: [Moons of Peril](https://oldschool.runescape.wiki/w/Moons%20of%20Peril)
+
+- You can send your minion to kill this monster using: [[/k name\:Moons of Peril]]
+
+- You can check your KC using: [[/minion kc name\:Moons of Peril]]
+
+- You can check the KC leaderboard using: [[/lb kc monster\:Moons of Peril]]
+
+- You can check your collection log using: [[/cl name\:Moons of Peril]]
+
+- You can check the collection log leaderboard using: [[/lb cl cl\:Moons of Peril]]
+
+</TabItem>
+<TabItem label="Costs">
+    - No Food Needed
+
+</TabItem>
+<TabItem label="Requirements">
+    [[herblore\:66]] [[cooking\:50]] [[fishing\:50]] [[hunter\:50]]
+
+**Required Quests**
+
+- Children of the Sun
+
+</TabItem>
+<TabItem label="Boosts">
+    <details>
+<summary>Item in Bank Boosts</summary>
+These boosts are applied from just being in your bank, and do not need to be equipped (but can also be equipped). The best boost you can use will automatically be used.
+
+You can have one of the following boosts:
+
+- 10% boost for [[Soulreaper axe]]
+
+- 8% boost for [[Noxious halberd]]
+
+- 6% boost for [[Osmumten's fang]]
+
+- 4% boost for [[Arkan blade]]
+
+---
+
+You can have one of the following boosts:
+
+- 8% boost for [[Dual macuahuitl]]
+
+- 6% boost for [[Inquisitor's mace]]
+
+- 4% boost for [[Zombie axe]]
+
+---
+
+You can have one of the following boosts:
+
+- 6% boost for [[Blade of saeldor]]
+
+- 4% boost for [[Sulphur blades]]
+
+---
+
+You can have one of the following boosts:
+
+- 10% boost for [[Dragon claws]]
+
+- 6% boost for [[Burning claws]]
+
+---
+
+</details>
+</TabItem>
+</Tabs>
+---
+
 ## Mutated Bloodveld
 
 <Tabs>
