add boost items/gear, update wiki page

--- a/docs/src/content/docs/osb/monsters.mdx
+++ b/docs/src/content/docs/osb/monsters.mdx
@@ -3585,7 +3585,7 @@ You can have one of the following boosts:
 
 </TabItem>
 <TabItem label="Requirements">
-    [[herblore\:66]] [[cooking\:50]] [[fishing\:50]] [[hunter\:50]]
+    [[attack\:70]] [[strength\:70]] [[defence\:70]] [[prayer\:70]] [[herblore\:66]] [[cooking\:50]] [[fishing\:50]] [[hunter\:50]]
 
 **Required Quests**
 
@@ -3599,39 +3599,321 @@ These boosts are applied from just being in your bank, and do not need to be equ
 
 You can have one of the following boosts:
 
-- 10% boost for [[Soulreaper axe]]
+- 5% boost for [[Soulreaper axe]]
 
-- 8% boost for [[Noxious halberd]]
+- 4% boost for [[Ghrazi rapier]]
 
-- 6% boost for [[Osmumten's fang]]
+- 3% boost for [[Blade of saeldor]]
 
-- 4% boost for [[Arkan blade]]
+- 3% boost for [[Noxious halberd]]
+
+- 2% boost for [[Zamorakian hasta]]
+
+- 2% boost for [[Abyssal dagger]]
+
+- 2% boost for [[Osmumten's fang]]
+
+- 2% boost for [[Voidwaker]]
+
+- 1% boost for [[Abyssal whip]]
+
+- 1% boost for [[Dragon sword]]
+
+- 1% boost for [[Dragon hasta]]
+
+- 1% boost for [[Zombie axe]]
+
+- 1% boost for [[Arkan blade]]
 
 ---
 
 You can have one of the following boosts:
 
-- 8% boost for [[Dual macuahuitl]]
+- 5% boost for [[Dual macuahuitl]]
 
-- 6% boost for [[Inquisitor's mace]]
+- 4% boost for [[Glacial temotli]]
 
-- 4% boost for [[Zombie axe]]
+- 3% boost for [[Inquisitor's mace]]
+
+- 3% boost for [[Soulreaper axe]]
+
+- 2% boost for [[Zamorakian hasta]]
+
+- 2% boost for [[Abyssal bludgeon]]
+
+- 2% boost for [[Ursine chainmace (u)]]
+
+- 1% boost for [[Torag's hammers]]
+
+- 1% boost for [[Sarachnis cudgel]]
+
+- 1% boost for [[Zombie axe]]
 
 ---
 
 You can have one of the following boosts:
 
-- 6% boost for [[Blade of saeldor]]
+- 5% boost for [[Soulreaper axe]]
 
-- 4% boost for [[Sulphur blades]]
+- 4% boost for [[Noxious halberd]]
+
+- 3% boost for [[Blade of saeldor]]
+
+- 2% boost for [[Abyssal whip]]
+
+- 2% boost for [[Abyssal tentacle]]
+
+- 2% boost for [[Ghrazi rapier]]
+
+- 2% boost for [[Sulphur blades]]
+
+- 1% boost for [[Dragon scimitar]]
+
+- 1% boost for [[Zamorakian hasta]]
+
+- 1% boost for [[Zombie axe]]
+
+- 1% boost for [[Arkan blade]]
 
 ---
 
 You can have one of the following boosts:
 
-- 10% boost for [[Dragon claws]]
+- 5% boost for [[Crystal halberd]]
 
-- 6% boost for [[Burning claws]]
+- 5% boost for [[Voidwaker]]
+
+- 4% boost for [[Dragon claws]]
+
+- 2% boost for [[Dragon dagger]]
+
+- 2% boost for [[Dragon mace]]
+
+- 2% boost for [[Abyssal dagger]]
+
+- 2% boost for [[Burning claws]]
+
+---
+
+</details>
+<details>
+<summary>Equipped Item Boosts</summary>
+To get these boosts, you need the item equipped in the right setup. The best boost you can use will automatically be used.
+
+Melee gear boosts, it is **required** to have atleast one of these:
+
+- 5% boost for [[Torva full helm]]
+
+- 5% boost for [[Oathplate helm]]
+
+- 4% boost for [[Justiciar faceguard]]
+
+- 4% boost for [[Serpentine helm]]
+
+- 3% boost for [[Neitiznot faceguard]]
+
+- 2% boost for [[Dharok's helm]]
+
+- 2% boost for [[Guthan's helm]]
+
+- 2% boost for [[Torag's helm]]
+
+- 2% boost for [[Verac's helm]]
+
+- 1% boost for [[Blood moon helm]]
+
+- 1% boost for [[Helm of neitiznot]]
+
+- 1% boost for [[Berserker helm]]
+
+---
+
+Melee gear boosts, it is **required** to have atleast one of these:
+
+- 5% boost for [[Torva platebody]]
+
+- 5% boost for [[Oathplate chest]]
+
+- 4% boost for [[Justiciar chestguard]]
+
+- 3% boost for [[Bandos chestplate]]
+
+- 2% boost for [[Dharok's platebody]]
+
+- 2% boost for [[Guthan's platebody]]
+
+- 2% boost for [[Torag's platebody]]
+
+- 2% boost for [[Verac's brassard]]
+
+- 1% boost for [[Fighter torso]]
+
+- 1% boost for [[Verac's brassard]]
+
+- 1% boost for [[Dragon chainbody]]
+
+---
+
+Melee gear boosts, it is **required** to have atleast one of these:
+
+- 5% boost for [[Torva platelegs]]
+
+- 5% boost for [[Oathplate legs]]
+
+- 4% boost for [[Justiciar legguards]]
+
+- 3% boost for [[Bandos tassets]]
+
+- 2% boost for [[Dharok's platelegs]]
+
+- 2% boost for [[Guthan's chainskirt]]
+
+- 2% boost for [[Torag's platelegs]]
+
+- 2% boost for [[Verac's plateskirt]]
+
+- 1% boost for [[Dragon platelegs]]
+
+---
+
+Melee gear boosts, it is **required** to have atleast one of these:
+
+- 5% boost for [[Infernal cape]]
+
+- 3% boost for [[Fire cape]]
+
+- 2% boost for [[Mythical cape]]
+
+- 1% boost for [[Obsidian cape]]
+
+---
+
+Melee gear boosts, it is **required** to have atleast one of these:
+
+- 5% boost for [[Ferocious gloves]]
+
+- 4% boost for [[Barrows gloves]]
+
+- 3% boost for [[Dragon gloves]]
+
+- 2% boost for [[Rune gloves]]
+
+- 1% boost for [[Regen bracelet]]
+
+- 1% boost for [[Granite gloves]]
+
+---
+
+Melee gear boosts, it is **required** to have atleast one of these:
+
+- 5% boost for [[Avernic treads (max)]]
+
+- 4% boost for [[Avernic treads (pr)(et)]]
+
+- 4% boost for [[Avernic treads (pr)(pe)]]
+
+- 4% boost for [[Avernic treads (pr)]]
+
+- 3% boost for [[Primordial boots]]
+
+- 2% boost for [[Echo boots]]
+
+- 1% boost for [[Dragon boots]]
+
+- 1% boost for [[Guardian boots]]
+
+- 1% boost for [[Granite boots]]
+
+---
+
+Melee gear boosts, it is **required** to have atleast one of these:
+
+- 5% boost for [[Amulet of rancour]]
+
+- 4% boost for [[Amulet of torture]]
+
+- 4% boost for [[Amulet of fury]]
+
+- 3% boost for [[Amulet of strength]]
+
+- 2% boost for [[Amulet of glory]]
+
+- 1% boost for [[Amulet of power]]
+
+---
+
+Melee gear boosts, it is **required** to have atleast one of these:
+
+- 5% boost for [[Ultor ring]]
+
+- 4% boost for [[Berserker ring (i)]]
+
+- 3% boost for [[Ring of suffering (ri)]]
+
+- 3% boost for [[Steel ring]]
+
+- 2% boost for [[Lightbearer]]
+
+- 1% boost for [[Brimstone ring]]
+
+- 1% boost for [[Warrior ring (i)]]
+
+---
+
+Melee gear boosts:
+
+- 2% boost for [[Ghommal's lucky penny]]
+
+- 2% boost for [[Rada's blessing 4]]
+
+- 1% boost for [[Holy blessing]]
+
+- 1% boost for [[Unholy blessing]]
+
+- 1% boost for [[Peaceful blessing]]
+
+- 1% boost for [[Honourable blessing]]
+
+- 1% boost for [[War blessing]]
+
+- 1% boost for [[Ancient blessing]]
+
+- 1% boost for [[Rada's blessing 3]]
+
+- 1% boost for [[Rada's blessing 2]]
+
+---
+
+Melee gear boosts:
+
+- 5% boost for [[Avernic defender]]
+
+- 5% boost for [[Dragonfire shield]]
+
+- 4% boost for [[Dragon defender]]
+
+- 3% boost for [[Toktz-ket-xil]]
+
+- 2% boost for [[Rune defender]]
+
+- 2% boost for [[Blessed spirit shield]]
+
+- 2% boost for [[Dragon sq shield]]
+
+- 2% boost for [[Crystal shield]]
+
+- 1% boost for [[Rune kiteshield]]
+
+---
+
+</details>
+<details>
+<summary>Degradeable/Chargeable Item Boosts</summary>
+These boosts are for items which degrade or have charges.
+
+Melee gear boosts:
+
+- 10% boost for [[Scythe of vitur]]
 
 ---
 
