--- a/docs/src/content/docs/osb/Miscellaneous/hackertoberfest.mdx
+++ b/docs/src/content/docs/osb/Miscellaneous/hackertoberfest.mdx
@@ -17,7 +17,7 @@ As Hacktoberfest no longer gives t-shirts out, I'm running my own version of it.
     changing formatting, changing 1 little thing, etc - they need to be real improvements or additions. The
     pull requests also need to be accepted to count.
 
-        Here are some random examples of PRs you can do that would be elligible:
+        Here are some random examples of PRs you can do that would be eligible:
 
         **Coding:**
             - Fixing Corporeal Beast to have more accurate kill-times and boosts (with some evidence showing its accurate)
@@ -31,7 +31,7 @@ As Hacktoberfest no longer gives t-shirts out, I'm running my own version of it.
 
         *Read the [Wiki Page](/getting-started/wiki) for more information on how to edit the wiki. If you need help you can ask in Discord*
 
-3.  Once you've made 3 elligible pull requests that have been accepted/merged, let me know in the #developers channel in the discord so I can give you your rewards. NOTE: At the time of writing, the rewards are not yet claimable, so if you are early you may not get it immediately. You'll have the whole month too, so don't rush.
+3.  Once you've made 3 eligible pull requests that have been accepted/merged, let me know in the #developers channel in the discord so I can give you your rewards. NOTE: At the time of writing, the rewards are not yet claimable, so if you are early you may not get it immediately. You'll have the whole month too, so don't rush.
 
 ## Rewards
 
@@ -40,7 +40,7 @@ As Hacktoberfest no longer gives t-shirts out, I'm running my own version of it.
 
 ### Other rewards
 
-These rewards will be rolled after the month is over, and anyone who was elligible for a t-shirt, is elligible to win these. The same person can't win more than one of these rewards.
+These rewards will be rolled after the month is over, and anyone who was eligible for a t-shirt, is eligible to win these. The same person can't win more than one of these rewards.
 
 - One random participant will receive 20m OSRS GP
 - One random participant will receive 5b OSB GP
@@ -54,6 +54,6 @@ These rewards will be rolled after the month is over, and anyone who was elligib
 1. You can only claim the rewards once per person.
 2. You cannot transfer your prize to someone else, the person who made the PRs is the one who gets the reward.
 3. If the person who wins the plushie doesn't want it, it will be rerolled - you can also let me know in advance if you don't want it, and I can exclude you from the draw.
-4. A PR can be merged, but not accepted as elligible. For example, if you make a PR fixing a typo, I may merge it just to have that typo fixed, but it won't count towards your 3 PRs.
-5. If any wiki contributions are clearly A.I generated, they wont be elligible.
+4. A PR can be merged, but not accepted as eligible. For example, if you make a PR fixing a typo, I may merge it just to have that typo fixed, but it won't count towards your 3 PRs.
+5. If any wiki contributions are clearly A.I generated, they wont be eligible.
 6. Any shady/weird stuff, like giving other people code and letting them submit it as their own, or submitting code that you didn't write, etc, will disqualify you from the event. You can always ask for help and give help.
