--- a/docs/src/content/docs/getting-started/changelog.mdx
+++ b/docs/src/content/docs/getting-started/changelog.mdx
@@ -21,7 +21,7 @@ You can claim the following items using [[/claim Halloween items]]
 
 > [[Spooky chair?raw]] [[Grim reaper top?raw]] [[Grim reaper bottoms?raw]] [[Grim reaper gloves?raw]] [[Spooky pumpkin lantern?raw]] [[Beige pumpkin (happy)?raw]] [[White pumpkin (happy)?raw]] [[Yellow pumpkin (happy)?raw]] [[Orange pumpkin (happy)?raw]] [[Red pumpkin (happy)?raw]] [[Dark green pumpkin (happy)?raw]] [[Powder grey pumpkin (happy)?raw]] [[Halloween scarecrow?raw]] [[Scarecrow shirt?raw]] [[Cobweb cape?raw]] [[Web cloak?raw]] [[Spider hat?raw]] [[Witch hat?raw]] [[Witch top?raw]] [[Witch robes?raw]] [[Witch boots?raw]] [[Witch cape?raw]] [[Treat cauldron?raw]] [[Halloween wig?raw]] [[Ugly halloween jumper (orange)?raw]] [[Ugly halloween jumper (black)?raw]] [[Haunted wine bottle?raw]] [[Saucepan?raw]] [[Headless head?raw]] [[Skeleton lantern?raw]] [[Pumpkin lantern?raw]] [[Spookier boots?raw]] [[Spookier gloves?raw]] [[Spookier hood?raw]] [[Spookier robe?raw]] [[Spookier skirt?raw]] [[Spooky boots?raw]] [[Spooky gloves?raw]] [[Spooky hood?raw]] [[Spooky robe?raw]] [[Spooky skirt?raw]] [[Eek?raw]] [[Clown mask?raw]] [[Clown bow tie?raw]] [[Clown gown?raw]] [[Clown trousers?raw]] [[Clown shoes?raw]] [[Jonas mask?raw]] [[Banshee mask?raw]] [[Banshee top?raw]] [[Banshee robe?raw]] [[Gravedigger mask?raw]] [[Gravedigger top?raw]] [[Gravedigger leggings?raw]] [[Gravedigger gloves?raw]] [[Gravedigger boots?raw]] [[Anti-panties?raw]] [[Grim reaper hood?raw]] [[Zombie head (hween)?raw]] [[Jack lantern mask?raw]] [[Skeleton mask?raw]] [[Skeleton shirt?raw]] [[Skeleton leggings?raw]] [[Skeleton gloves?raw]] [[Skeleton boots?raw]]
 
-Permanent ironmen are also elligible to receive: [[Scythe]] [[Pumpkin]] [[Black h'ween mask]] [[Red halloween mask]] [[Green halloween mask]] [[Blue halloween mask]]
+Permanent ironmen are also eligible to receive: [[Scythe]] [[Pumpkin]] [[Black h'ween mask]] [[Red halloween mask]] [[Green halloween mask]] [[Blue halloween mask]]
 
 ### [[gc]]
 
@@ -656,7 +656,7 @@ Permanent ironmen are also elligible to receive: [[Scythe]] [[Pumpkin]] [[Black 
 - Added the Zombie Pirate Locker to [[/open]], it can be opened using the [[Zombie pirate key]].
 - Zombie pirates now count as zombie/pirate slayer tasks.
 - If you try to kill a monster that can only be killed in the wilderness (but you didn't specify to use the wilderness), it now gives a better message showing how to do that.
-- The [[30107]] now drops from elligible activities (mining runite, chopping yews/magics/maples) at a rate of 1 per hour, if you have finished the Children Of The Sun quest.
+- The [[30107]] now drops from eligible activities (mining runite, chopping yews/magics/maples) at a rate of 1 per hour, if you have finished the Children Of The Sun quest.
 - Hueycoatl bug fixes: dropping less hides than it should, using no food, pet rate being too common.
 - Added the [Amoxliatl](/osb/monsters/#amoxliatl) monster, for the boosts/requirements/etc, see the [monsters page](/osb/monsters/#amoxliatl)
   - Added the [combat achievements](/osb/combat-achievements/)
