Fix lots of broken wiki links, add auto links

--- a/docs/src/content/docs/getting-started/changelog.mdx
+++ b/docs/src/content/docs/getting-started/changelog.mdx
@@ -748,10 +748,8 @@ To see the boosts, requirements and all information on the boss, see our [The Hu
 	firstHash="4fbfe429e9a1bdf817175cf497177e47fefc6be6"
 	secondHash="e03afd628fd7e1aa460acc417d822c2d697f9087"
 />
-- Hacktoberfest has finished, and everyone has been sent out their custom merch
-and other prizes! Thank you to all who participated. - OSB Bingo #3 has
-finished! Read the page for it for more information: [OSB Bingo
-#3](/osb/miscellaneous/bingo/#osb-bingo-3-finished)
+- Hacktoberfest has finished, and everyone has been sent out their custom merch and other prizes! Thank you to all who participated.
+- OSB Bingo #3 has finished! Read the page for it for more information.
 
 ### [[gc]]
 
@@ -819,7 +817,7 @@ finished! Read the page for it for more information: [OSB Bingo
 	secondHash="4fbfe429e9a1bdf817175cf497177e47fefc6be6"
 />
 
-Bingo! We are running the 3rd official OSB bingo. See the [Bingo Page](/getting-started/bingo) for information.
+Bingo! We are running the 3rd official OSB bingo. See the Bingo Page for information.
 
 ### [[gc]]
 
@@ -877,7 +875,7 @@ Bingo! We are running the 3rd official OSB bingo. See the [Bingo Page](/getting-
 
 ### Hacktoberfest
 
-I am running our own Hacktoberfest! Check out the [Hacktoberfest](/getting-started/hackertoberfest) page if you're interested.
+I am running our own Hacktoberfest! Check out the Hacktoberfest page if you're interested.
 
 ### [[gc]]
 
