--- a/docs/src/content/docs/bso/Monsters/index.mdx
+++ b/docs/src/content/docs/bso/Monsters/index.mdx
@@ -4,14 +4,14 @@ title: "Custom Monsters"
 
 ## List
 
-- [Cockroach Soldier](./#cockroach-soldier)
-- [Elite Black knight](./#elite-black-knight)
-- [Frost Dragon](./#frost-dragon)
-- [Polypore Dungeon](polypore-dungeon.md)
-- [Rum Pumped Crab](./#rum-pumped-crab)
-- [Tormented Demon](./#tormented-demon)
-- [Vladimir Drakan](./#vladidmir-drakan)
-- [Yeti](./#yeti)
+- [Cockroach Soldier](#cockroach-soldier)
+- [Elite Black knight](#elite-black-knight)
+- [Frost Dragon](#frost-dragon)
+- [Polypore Dungeon](polypore-dungeon)
+- [Rum Pumped Crab](#rum-pumped-crab)
+- [Tormented Demon](#tormented-demon)
+- [Vladimir Drakan](#vladidmir-drakan)
+- [Yeti](#yeti)
 
 ## Custom Monsters
 
@@ -21,13 +21,13 @@ The monsters listed under this heading do not belong to any specific section, an
 
 #### Notable drops:
 
-Carapace (1 per kill). Used to craft [Carapace armour](../../skills/crafting.md#custom-content-and-boosts) (equivalent to Adamant)
+Carapace (1 per kill). Used to craft [Carapace armour](/bso/skills/crafting#custom-content-and-boosts) (equivalent to Adamant)
 
 ### Elite Black Knight
 
 #### Requirements:
 
-[Dark Temple Key](../../skills/thieving.md#custom-content-and-boosts)
+[Dark Temple Key](/bso/skills/thieving#custom-content-and-boosts)
 
 #### Notable drops:
 
@@ -65,8 +65,8 @@ Brackish blade - 1/1,200 - No major uses other than a CL item.
 
 #### Custom Boosts:
 
-- [Tzkal Cape](/minigames/emerged-zuk-inferno) / Infernal Cape / Fire Cape: 8% / 4% / 2% (works from bank)
-- [Ancient Rejuvenation Pool](/skills/construction) / Any other Tier: 5% / 3%
+- [[Tzkal Cape]] / Infernal Cape / Fire Cape: 8% / 4% / 2% (works from bank)
+- [Ancient Rejuvenation Pool](/bso/skills/construction) / Any other Tier: 5% / 3%
 
 ### Tormented Demon
 
@@ -76,7 +76,7 @@ Brackish blade - 1/1,200 - No major uses other than a CL item.
 
 #### Custom Boosts:
 
-- [Tzkal Cape](/minigames/emerged-zuk-inferno): 5%
+- [[Tzkal Cape]]: 5%
 
 #### Notable drops:
 
@@ -145,7 +145,7 @@ Brackish blade - 1/1,200 - No major uses other than a CL item.
 
 #### Custom Boosts:
 
-[Ancient Rejuvenation Pool](/skills/construction): 5%
+[Ancient Rejuvenation Pool](/bso/skills/construction): 5%
 
 #### Notable drops:
 
