--- a/docs/src/content/docs/osb/Buyables/buyables.mdx
+++ b/docs/src/content/docs/osb/Buyables/buyables.mdx
@@ -11,7 +11,7 @@ Every item on this page can be purchased with the following command:
 
 For items bought via timed trips, see [Trip Buyables](./trip-buyables).
 
-Prices are inflated in comparison to Oldschool RuneScape to act as more of a GP sink on the bot. If your minion is an Ironman, you will get the same prices as on Oldschool RuneScape for _most_ items, which can be viewed [here](../getting-started/ironman-mode.md#ironman-prices).
+Prices are inflated in comparison to Oldschool RuneScape to act as more of a GP sink on the bot. If your minion is an Ironman, you will get the same prices as on Oldschool RuneScape for _most_ items, which can be viewed [here](../getting-started/ironman-mode#ironman-prices).
 
 ## List of Buyables
 
