--- a/docs/src/content/docs/osb/Raids/tob.mdx
+++ b/docs/src/content/docs/osb/Raids/tob.mdx
@@ -57,7 +57,7 @@ These items affect your boost score:
 - Having more attempts/KC
 - Having better gear
 
-For more information ([see Theory section below](./#Theory))
+For more information ([see Theory section below](#theory))
 
 ---
 
@@ -69,7 +69,7 @@ For Hard mode, the entire team must have 100% boost score to achieve the fastest
 
 ## Uniques
 
-ToB hard mode offers a few extra uniques on top of the regular weapons and armour, these being ornament kits for the Scythe and Sang staff, and the Sanguine dust for pet transmogs ([see below](./#pet-transmogs)).
+ToB hard mode offers a few extra uniques on top of the regular weapons and armour, these being ornament kits for the Scythe and Sang staff, and the Sanguine dust for pet transmogs ([see below](#pet-transmogs)).
 
 There are no requirements to roll on the kit/dust table, however, they are all on the same table, so you can only receive one of the three items at a time. Their drop rates are:
 
