--- a/docs/src/content/docs/osb/Skills/fishing.mdx
+++ b/docs/src/content/docs/osb/Skills/fishing.mdx
@@ -12,7 +12,7 @@ Dark fishing bait and Raw Karambwanji are **not** sold by the bot. You must obta
 
 ### Angler Outfit
 
-Obtainable from [Fishing Trawler](fishing-trawler.md) and [Aerial Fishing](https://wiki.oldschool.gg/skills/fishing/aerial-fishing). When equipped in the skilling setup, it gives:
+Obtainable from [Fishing Trawler](fishing-trawler) and [Aerial Fishing](https://wiki.oldschool.gg/skills/fishing/aerial-fishing). When equipped in the skilling setup, it gives:
 
 - 0.4% — Angler hat
 - 0.8% — Angler top
@@ -54,7 +54,7 @@ Base time per game: 13 minutes
 ### Trawler Boosts
 
 - +0.2% trip time reduction per KC (up to +10% at 50 KC)
-- +50% fish received with [Elite Ardougne Diary](../../miscellaneous/achievement-diaries.md#ardougne-diary-elite)
+- +50% fish received with [Elite Ardougne Diary](../../miscellaneous/achievement-diaries#ardougne-diary-elite)
 
 ## Training
 
