--- a/docs/src/content/docs/osb/Skills/mining.mdx
+++ b/docs/src/content/docs/osb/Skills/mining.mdx
@@ -41,11 +41,11 @@ If you have at least 60 Mining, the ore you are mining provides minerals, and th
 
 ## Powermining
 
-Using this filter when mining ores allows your minion to reach much higher xp rates, at the expense of not receiving any ores from your trip. For ironmen, it may be beneficial to mine normally so they can use the ores for early smithing or crafting levels. You will still receive minerals and clues when powermining. You cannot receive golden nuggets from powermining as it is not allowed in [Motherlode mine](motherlode-mine.md).
+Using this filter when mining ores allows your minion to reach much higher xp rates, at the expense of not receiving any ores from your trip. For ironmen, it may be beneficial to mine normally so they can use the ores for early smithing or crafting levels. You will still receive minerals and clues when powermining. You cannot receive golden nuggets from powermining as it is not allowed in [Motherlode mine](motherlode-mine).
 
 ## Gold & Silver Ore
 
-If you have 99 crafting, you will get a significant 70% boost to your trip time, due to using the bank at the crafting guild. This applies only when mining gold and silver ores. You cannot recieve gold nuggets from mining gold or silver ores, rather only from [Motherlode mine](motherlode-mine.md).
+If you have 99 crafting, you will get a significant 70% boost to your trip time, due to using the bank at the crafting guild. This applies only when mining gold and silver ores. You cannot recieve gold nuggets from mining gold or silver ores, rather only from [Motherlode mine](motherlode-mine).
 
 ## Celestial Ring/Signet
 
@@ -70,7 +70,7 @@ The Varrock diary rewards provide a 10% bonus to the amount of ores you will rec
 
 ## Prospector's Outfit
 
-Must be equipped in the skilling setup for the boost to apply. Nuggets are only obtained from [Motherlode mine](motherlode-mine.md).
+Must be equipped in the skilling setup for the boost to apply. Nuggets are only obtained from [Motherlode mine](motherlode-mine).
 
 | **Item**          | **XP Boost** | **Golden Nugget Cost** |
 | ----------------- | ------------ | ---------------------- |
