Add various quests
Adds the following quests:
The Final Dawn
Scrambled!
Shadows of Custodia
Tutorial Island

This gets us up to date pre-sailing

--- a/docs/src/content/docs/osb/quests.mdx
+++ b/docs/src/content/docs/osb/quests.mdx
@@ -179,6 +179,42 @@ You can send your minion to do this quest using [[/activities quest name\:Perilo
 
 [[slayer\:40,000]] [[runecraft\:5,000]] [[hunter\:5,000]] [[fishing\:5,000]]
 
+## Scrambled!
+
+You can send your minion to do this quest using [[/activities quest name\:Scrambled!]]
+
+### Skill Requirements
+
+- Skills: [[construction\:38]] [[cooking\:36]] [[smithing\:35]]
+
+### Required Quests
+
+- Must have finished Children of the Sun
+
+### Item Rewards
+
+[[30970]]
+
+### XP Rewards
+
+[[construction\:5,000]] [[cooking\:5,000]] [[smithing\:5,000]]
+
+## Shadows of Custodia
+
+You can send your minion to do this quest using [[/activities quest name\:Shadows of Custodia]]
+
+### Skill Requirements
+
+- Skills: [[slayer\:54]] [[fishing\:45]] [[construction\:41]] [[hunter\:36]]
+
+### Required Quests
+
+- Must have finished Children of the Sun
+
+### XP Rewards
+
+[[slayer\:10,000]] [[hunter\:4,000]] [[fishing\:3,000]] [[construction\:3,000]]
+
 ## The Curse of Arrav
 
 You can send your minion to do this quest using [[/activities quest name\:The Curse of Arrav]]
@@ -198,6 +234,28 @@ You can send your minion to do this quest using [[/activities quest name\:The Cu
 ### XP Rewards
 
 [[mining\:40,000]] [[thieving\:40,000]] [[agility\:40,000]]
+
+## The Final Dawn
+
+You can send your minion to do this quest using [[/activities quest name\:The Final Dawn]]
+
+### Skill Requirements
+
+- Skills: [[thieving\:66]] [[runecraft\:52]] [[fletching\:52]]
+
+### Required Quests
+
+- Must have finished Perilous Moons
+
+- Must have finished The Heart of Darkness
+
+### Item Rewards
+
+[[30960]] [[30955]]
+
+### XP Rewards
+
+[[thieving\:55,000]] [[runecraft\:25,000]] [[fletching\:25,000]]
 
 ## The Heart of Darkness
 
@@ -256,6 +314,14 @@ You can send your minion to do this quest using [[/activities quest name\:The Ri
 ### XP Rewards
 
 [[woodcutting\:2,000]]
+
+## Tutorial Island
+
+You can send your minion to do this quest using [[/activities quest name\:Tutorial Island]]
+
+### Item Rewards
+
+[[1351]] [[1265]] [[590]] [[303]] [[315]] [[1205]] [[1277]] [[1171]] [[841]] [[882]] [[556]] [[558]] [[1925]] [[1931]] [[2309]] [[555]] [[557]] [[559]] [[995]]
 
 ## Twilight's Promise
 
