--- a/docs/src/content/docs/osb/commands.mdx
+++ b/docs/src/content/docs/osb/commands.mdx
@@ -1204,7 +1204,7 @@ Fletch items with the Fletching skill.
 
 **Examples**
 
-- `/craft name:Onyx necklace`
+- `/fletch name:Yew longbow`
 
 ## /gamble
 
